--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ li{
 .card{
   background-color:rgba(177, 211, 206, 0.966);
   padding: 30px;
-  box-shadow: 0px 10px 30px rgba(135, 147, 147, 0.502);;
+  box-shadow: 0px 10px 30px rgba(135, 147, 147, 0.502);
   border-radius:4px;
-  margin:20px 0px;
+  margin:0 auto 0;
   border:1px solid #EAEAEA;
   width: 500px;
   margin: 0 auto;
@@ -64,7 +64,7 @@ li{
 .container{
   background-color:rgba(177, 211, 206, 0.966);
   padding: 30px;
-  box-shadow: 0px 10px 30px rgba(135, 147, 147, 0.502);;
+  box-shadow: 0px 10px 30px rgba(135, 147, 147, 0.502);
   border-radius:4px;
   border:1px solid #EAEAEA;
   width: 500px;
@@ -79,10 +79,10 @@ li{
   text-align: center;
 }
 
-@media (max-width: 540px) {
-  /* For a screen < 540px, this CSS will be read */
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
   .container {
-    width: 300px;
+    width: 700px;
   }
 }
 @media (max-width: 720px) {
@@ -91,9 +91,9 @@ li{
     width: 500px;
   }
 }
-@media (max-width: 960px) {
-  /* For a screen < 960px, this CSS will be read */
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
   .container {
-    width: 700px;
+    width: 300px;
   }
 }
